--- a/Client/src/styles/AppStyles.css
+++ b/Client/src/styles/AppStyles.css
@@ -58,7 +58,6 @@
 }
 
 .active-btn {
-    margin: 5px;
     background-color: var(--active-color) !important;
     box-shadow: 0px 5px var(--active-color-shadow);
 }
@@ -66,4 +65,18 @@
 .active-btn:focus {
     transform: translateY(5px);
     box-shadow: 0px 0px var(--active-color-shadow);
+}
+
+.styless-link{
+    text-decoration: none;
+    color: white;
+}
+
+.custom-navbar{
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: var(--block-shadow-color);
 }
