--- a/Client/src/styles/AppStyles.css
+++ b/Client/src/styles/AppStyles.css
@@ -154,7 +154,15 @@
 
 }
 
-.notification-block-style {
+.error-notification-block-style {
+    background-color: var(--danger-color);
+    box-shadow: 0px 5px var(--danger-color-shadow);
+    border-radius: 10px;
+    padding: 10px;
+    color: var(--background-color);
+}
+
+.default-notification-block-style {
     background-color: var(--active-color);
     box-shadow: 0px 5px var(--active-color-shadow);
     border: 1px solid var(--active-border-color);
